infrastructure/configs/grafana/alloy-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alloy-httproute
  namespace: monitoring
spec:
  parentRefs:
  - name: mdch-lab-gateway
    namespace: cilium
  hostnames:
  - "alloy.mdch-lab.dev"
  rules:
  - backendRefs:
    - name: k8s-monitoring-alloy-logs
      port: 12345
  - matches:
    - path:
        type: PathPrefix
        value: /cluster
    backendRefs:
    - name: k8s-monitoring-alloy-logs-cluster
      port: 12345
  - matches:
    - path:
        type: PathPrefix
        value: /pods
    backendRefs:
    - name: k8s-monitoring-alloy-logs
      port: 12345
