infrastructure/configs/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-httproute
  namespace: monitoring
spec:
  parentRefs:
  - name: mdch-lab-gateway
  hostnames:
  - "grafana.mdch-lab.dev"
  rules:
  - matches:
    - path:
        type: Exact
        value: "/"
  - backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
